# spdlog_issue_2301

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
cpplib/: CMakeLists.txt  cpplib.cpp  cpplib.h
