
cmake_minimum_required(VERSION 3.12.0)
project(spdlog_issue_2301_cpplib VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(SPDLOG_BUILD_SHARED OFF CACHE BOOL "")
set(SPDLOG_BUILD_EXAMPLE OFF CACHE BOOL "")
set(SPDLOG_BUILD_EXAMPLE_HO OFF CACHE BOOL "")
set(SPDLOG_BUILD_TESTS OFF CACHE BOOL "")
set(SPDLOG_BUILD_TESTS_HO OFF CACHE BOOL "")
set(SPDLOG_BUILD_BENCH OFF CACHE BOOL "")
set(SPDLOG_SANITIZE_ADDRESS OFF CACHE BOOL "")
set(SPDLOG_INSTALL OFF CACHE BOOL "")
set(SPDLOG_FMT_EXTERNAL OFF CACHE BOOL "")
set(SPDLOG_FMT_EXTERNAL_HO OFF CACHE BOOL "")
set(SPDLOG_NO_EXCEPTIONS OFF CACHE BOOL "")

add_library(cpplib
    cpplib.cpp)
target_link_libraries(cpplib
    PUBLIC
        spdlog)
target_include_directories(
    cpplib
        PUBLIC
            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
            $<INSTALL_INTERFACE:include/cpplib>)
